--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "csurf": "^1.11.0",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
