--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
+    "util": "^0.12.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
